@@ -1,3 +1,8 @@
+2012-06-28  Jan Nijtmans  <nijtmans@users.sf.net>
+
+	* library/ttk/scale.tcl: [Bug 2501278]: ttk::scale keyboard binding
+	problem.
+
 2012-06-07  Jan Nijtmans  <nijtmans@users.sf.net>
 
 	* win/tkWinDialog.c: [Bug 1913750]: tk_chooseDirectory -initialdir
